--- a/web/package.json
+++ b/web/package.json
@@ -21,9 +21,17 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^7.0.2",
     "@dnd-kit/utilities": "^3.2.2",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toast": "^1.2.15",
     "@tanstack/react-query": "^5.59.0",
     "@tanstack/react-virtual": "^3.13.12",
     "@uiw/react-markdown-preview": "^5.1.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "immer": "^10.1.1",
     "lucide-react": "^0.451.0",
@@ -69,6 +77,7 @@
     "postcss": "^8.4.47",
     "storybook": "^8.6.14",
     "tailwindcss": "^3.4.13",
+    "tailwindcss-animate": "^1.0.7",
     "vitest": "^3.2.4"
   },
   "overrides": {
