--- a/web/package.json
+++ b/web/package.json
@@ -30,10 +30,12 @@
     "@radix-ui/react-toast": "^1.2.15",
     "@tanstack/react-query": "^5.59.0",
     "@tanstack/react-virtual": "^3.13.12",
+    "@types/lodash": "^4.17.21",
     "@uiw/react-markdown-preview": "^5.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "immer": "^10.1.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.451.0",
     "next": "16.0.8",
     "posthog-js": "^1.292.0",
