--- a/deploy/docker/docker-compose.yml
+++ b/deploy/docker/docker-compose.yml
@@ -4,8 +4,8 @@ services:
   # ALEX SSE Server (Go)
   alex-server:
     build:
-      context: .
-      dockerfile: Dockerfile.server
+      context: ../..
+      dockerfile: deploy/docker/Dockerfile.server
       args:
         BASE_GO_IMAGE: ${BASE_GO_IMAGE:-golang:1.24-alpine}
         BASE_RUNTIME_IMAGE: ${BASE_RUNTIME_IMAGE:-alpine:latest}
@@ -24,7 +24,7 @@ services:
       - ALEX_SANDBOX_BASE_URL=http://alex-sandbox:8080
     volumes:
       - alex-sessions:/data/sessions
-      - ./:/workspace:cached  # Mount workspace for development
+      - ../../:/workspace:cached  # Mount workspace for development
       - ~/.alex-config.json:/root/.alex-config.json:ro
     restart: unless-stopped
     depends_on:
@@ -43,7 +43,7 @@ services:
   # Next.js Web Frontend
   web:
     build:
-      context: ./web
+      context: ../../web
       dockerfile: Dockerfile
       args:
         NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-auto}
@@ -88,8 +88,8 @@ services:
     # Use China mirror if USE_CHINA_SANDBOX=true, otherwise build locally
     image: ${SANDBOX_IMAGE:-}
     build:
-      context: .
-      dockerfile: Dockerfile.sandbox
+      context: ../..
+      dockerfile: deploy/docker/Dockerfile.sandbox
       args:
         NPM_REGISTRY: ${NPM_REGISTRY:-https://registry.npmjs.org/}
         PIP_INDEX_URL: ${PIP_INDEX_URL:-https://pypi.org/simple}
@@ -97,7 +97,7 @@ services:
     ports:
       - "8090:8080"
     volumes:
-      - ./skills:/workspace/skills:ro
+      - ../../skills:/workspace/skills:ro
     restart: unless-stopped
     security_opt:
       - ${SANDBOX_SECURITY_OPT:-apparmor=unconfined}
