--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -3,7 +3,6 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: alex-system
-
 ---
 # ConfigMap for shared configuration
 apiVersion: v1
@@ -15,7 +14,8 @@ data:
   ALEX_MODEL: "gpt-4"
   ALEX_VERBOSE: "false"
   SESSION_STORE_PATH: "/data/sessions"
-
+  ALEX_SANDBOX_BASE_URL: "http://alex-sandbox:8080"
+  NEXT_PUBLIC_API_URL: "http://alex-server-service:8080"
 ---
 # Secret for API keys
 apiVersion: v1
@@ -28,7 +28,6 @@ stringData:
   OPENAI_API_KEY: "your-api-key-here"  # Replace with actual key or use sealed-secrets
   AUTH_JWT_SECRET: "replace-with-strong-secret"
   AUTH_DATABASE_URL: "postgres://alex:alex@postgres-service:5432/alex_auth?sslmode=disable"
-
 ---
 # ALEX Server Deployment
 apiVersion: apps/v1
@@ -50,8 +49,8 @@ spec:
     spec:
       containers:
       - name: alex-server
-        image: alex-server:latest  # Replace with your registry
-        imagePullPolicy: Always
+        image: ghcr.io/cklxx/alex-server:latest  # Replace with your registry/tag
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
           name: http
@@ -76,6 +75,11 @@ spec:
             configMapKeyRef:
               name: alex-config
               key: SESSION_STORE_PATH
+        - name: ALEX_SANDBOX_BASE_URL
+          valueFrom:
+            configMapKeyRef:
+              name: alex-config
+              key: ALEX_SANDBOX_BASE_URL
         - name: REDIS_URL
           value: "redis-service:6379"
         - name: AUTH_JWT_SECRET
@@ -116,7 +120,6 @@ spec:
       - name: sessions
         persistentVolumeClaim:
           claimName: alex-sessions-pvc
-
 ---
 # ALEX Server Service
 apiVersion: v1
@@ -133,7 +136,6 @@ spec:
     targetPort: 8080
     name: http
   type: ClusterIP
-
 ---
 # Web Frontend Deployment
 apiVersion: apps/v1
@@ -155,14 +157,17 @@ spec:
     spec:
       containers:
       - name: alex-web
-        image: alex-web:latest  # Replace with your registry
-        imagePullPolicy: Always
+        image: ghcr.io/cklxx/alex-web:latest  # Replace with your registry/tag
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 3000
           name: http
         env:
         - name: NEXT_PUBLIC_API_URL
-          value: "http://alex-server-service:8080"
+          valueFrom:
+            configMapKeyRef:
+              name: alex-config
+              key: NEXT_PUBLIC_API_URL
         - name: NODE_ENV
           value: "production"
         resources:
@@ -184,7 +189,6 @@ spec:
             port: 3000
           initialDelaySeconds: 10
           periodSeconds: 5
-
 ---
 # Web Service
 apiVersion: v1
@@ -201,7 +205,55 @@ spec:
     targetPort: 3000
     name: http
   type: ClusterIP
-
+---
+# Sandbox Deployment
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: alex-sandbox
+  namespace: alex-system
+  labels:
+    app: alex-sandbox
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: alex-sandbox
+  template:
+    metadata:
+      labels:
+        app: alex-sandbox
+    spec:
+      containers:
+      - name: alex-sandbox
+        image: ghcr.io/agent-infra/sandbox:latest
+        imagePullPolicy: IfNotPresent
+        ports:
+        - containerPort: 8080
+          name: http
+        resources:
+          requests:
+            cpu: "250m"
+            memory: "512Mi"
+          limits:
+            cpu: "1000m"
+            memory: "1Gi"
+---
+# Sandbox Service
+apiVersion: v1
+kind: Service
+metadata:
+  name: alex-sandbox
+  namespace: alex-system
+spec:
+  selector:
+    app: alex-sandbox
+  ports:
+  - protocol: TCP
+    port: 8080
+    targetPort: 8080
+    name: http
+  type: ClusterIP
 ---
 # Redis Deployment
 apiVersion: apps/v1
@@ -222,6 +274,7 @@ spec:
       containers:
       - name: redis
         image: redis:7-alpine
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 6379
         resources:
@@ -238,7 +291,6 @@ spec:
       - name: redis-data
         persistentVolumeClaim:
           claimName: redis-pvc
-
 ---
 # Redis Service
 apiVersion: v1
@@ -253,7 +305,6 @@ spec:
   - protocol: TCP
     port: 6379
     targetPort: 6379
-
 ---
 # Ingress for external access
 apiVersion: networking.k8s.io/v1
@@ -290,7 +341,6 @@ spec:
             name: alex-web-service
             port:
               number: 3000
-
 ---
 # PersistentVolumeClaim for sessions
 apiVersion: v1
@@ -305,7 +355,6 @@ spec:
     requests:
       storage: 10Gi
   storageClassName: standard  # Adjust based on your cluster
-
 ---
 # PersistentVolumeClaim for Redis
 apiVersion: v1
@@ -320,7 +369,6 @@ spec:
     requests:
       storage: 5Gi
   storageClassName: standard
-
 ---
 # HorizontalPodAutoscaler for alex-server
 apiVersion: autoscaling/v2
