fix: bypass unreachable loopback proxy

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,9 @@ LLM_MODEL=gpt-4o-mini
 # Logging
 ALEX_VERBOSE=false
 
+# Networking / Proxy (optional)
+# ALEX_PROXY_MODE=auto  # auto|strict|direct
+
 # Redis Configuration (optional)
 REDIS_URL=
 
