--- a/npm/alex-code/package.json
+++ b/npm/alex-code/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alex-code",
-  "version": "0.5.8",
+  "version": "0.6.0",
   "description": "ALEX (Agile Light Easy Xpert Code Agent) is a lightweight AI code agent built in Go, focused on core coding capabilities.",
   "main": "install.js",
   "bin": {
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cklxx/Alex-Code.git"
+    "url": "git+https://github.com/cklxx/elephant.ai.git"
   },
   "keywords": [
     "ai",
@@ -23,14 +23,14 @@
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/cklxx/Alex-Code/issues"
+    "url": "https://github.com/cklxx/elephant.ai/issues"
   },
-  "homepage": "https://github.com/cklxx/Alex-Code#readme",
+  "homepage": "https://github.com/cklxx/elephant.ai#readme",
   "optionalDependencies": {
-    "alex-code-linux-amd64": "0.5.8",
-    "alex-code-linux-arm64": "0.5.8",
-    "alex-code-darwin-amd64": "0.5.8",
-    "alex-code-darwin-arm64": "0.5.8",
-    "alex-code-windows-amd64": "0.5.8"
+    "alex-code-linux-amd64": "0.6.0",
+    "alex-code-linux-arm64": "0.6.0",
+    "alex-code-darwin-amd64": "0.6.0",
+    "alex-code-darwin-arm64": "0.6.0",
+    "alex-code-windows-amd64": "0.6.0"
   }
 }
