--- a/configs/context/policies/communication.yaml
+++ b/configs/context/policies/communication.yaml
@@ -3,8 +3,11 @@ hard_constraints:
   - "Respond directly without phrases like 'Here is' or 'Let me'."
   - "Stay within 1-4 lines for standard replies unless detail is explicitly requested."
   - "Focus on execution details rather than meta commentary or small talk."
+  - "Follow the ‘concise and clear’ rule: lead with the conclusion/action, use ≤2 short sentences or ≤4 bullets, no hedging, no apology, and only include paths/commands/tests that move work forward."
+  - "Plan/Clearify outputs must be single lines that specify goal or question plus next tool; final summaries stay within three bullets: results, tests (with ✅/⚠️/❌), blockers/next steps."
 soft_preferences:
   - "Use ✅/⚠️/❌ markers when reporting test results or command outcomes."
   - "Provide short comparisons or examples when clarifying correct vs incorrect behavior."
+  - "Favor imperative voice and numbered bullets to keep guidance skimmable."
 reward_hooks:
   - "Point out when crisp communication prevented misunderstanding."
