--- a/.env.example
+++ b/.env.example
@@ -41,6 +41,14 @@ AUTH_BOOTSTRAP_DISPLAY_NAME=Admin
 # GOOGLE_CLIENT_SECRET=
 # WECHAT_APP_ID=
 
+# Web session persistence (required in web/server mode)
+# By default, if ALEX_SESSION_DATABASE_URL is unset but AUTH_DATABASE_URL is set,
+# the server will reuse AUTH_DATABASE_URL for session persistence.
+ALEX_SESSION_DATABASE_URL=postgres://alex:alex@localhost:5432/alex_auth?sslmode=disable
+# Where the web server stores session-side artifacts (journals, migration markers).
+# Defaults to ~/.alex-web-sessions. For containers/K8s, set to a mounted volume.
+# ALEX_WEB_SESSION_DIR=/data/sessions
+
 # China Mirror Configuration (uncomment to enable faster builds)
 
 # NPM Registry
