--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -88,6 +88,11 @@ spec:
             configMapKeyRef:
               name: alex-config
               key: SESSION_STORE_PATH
+        - name: ALEX_WEB_SESSION_DIR
+          valueFrom:
+            configMapKeyRef:
+              name: alex-config
+              key: SESSION_STORE_PATH
         - name: REDIS_URL
           value: "redis-service:6379"
         - name: AUTH_JWT_SECRET
@@ -95,6 +100,11 @@ spec:
             secretKeyRef:
               name: alex-secrets
               key: AUTH_JWT_SECRET
+        - name: ALEX_SESSION_DATABASE_URL
+          valueFrom:
+            secretKeyRef:
+              name: alex-secrets
+              key: AUTH_DATABASE_URL
         - name: AUTH_DATABASE_URL
           valueFrom:
             secretKeyRef:
