feat: URL-backed attachments (no data cache)

--- a/.env.example
+++ b/.env.example
@@ -48,6 +48,10 @@ ALEX_SESSION_DATABASE_URL=postgres://alex:alex@localhost:5432/alex_auth?sslmode=
 # Where the web server stores session-side artifacts (journals, migration markers).
 # Defaults to ~/.alex-web-sessions. For containers/K8s, set to a mounted volume.
 # ALEX_WEB_SESSION_DIR=/data/sessions
+# Where the web server stores uploaded attachment blobs (decoded from base64) and
+# serves them via /api/attachments/.
+# Defaults to ~/.alex-web-attachments. For containers/K8s, set to a mounted volume.
+# ALEX_WEB_ATTACHMENT_DIR=/data/attachments
 
 # China Mirror Configuration (uncomment to enable faster builds)
 
