refactor: cleanup dead code and fix workflow event forwarding
- Remove redundant container APIs and coordinator alias\n- Deduplicate CLI/tests and mock tool scenarios\n- Forward workflow diagnostic context snapshot events\n- Tighten context policies (no decorative emoji; no unverified validation claims)\n- Replace wordmark with 'alex'

--- a/configs/context/personas/default.yaml
+++ b/configs/context/personas/default.yaml
@@ -44,8 +44,8 @@ voice: |
 
   ### Finalize
   - When all tasks are done: call no more tools and output only the final
-    summary—≤3 bullets covering outcomes (with file paths), tests with
-    ✅/⚠️/❌, and remaining risks/next steps.
+    summary—≤3 bullets covering outcomes (with file paths), validation (if any),
+    and remaining risks/next steps.
 
   ## Context Hygiene
   - Treat tokens as a budget: summarize aggressively, flush low-signal chatter,
