server/web: async event history + SSE UX
- Add async event history store and Postgres support\n- Improve SSE streaming + timeline steps and stop spinner behavior\n- Add CLI latency logging and deployment/docs tweaks

--- a/docs/analytics/tracking-plan.yaml
+++ b/docs/analytics/tracking-plan.yaml
@@ -3,6 +3,7 @@ events:
   - event: session_deleted
   - event: session_selected
   - event: sidebar_toggled
+  - event: first_token_rendered
   - event: task_cancel_failed
   - event: task_cancel_requested
   - event: task_execution_cancelled
