--- a/web/package.json
+++ b/web/package.json
@@ -44,6 +44,7 @@
     "posthog-js": "^1.292.0",
     "prism-react-renderer": "^2.4.0",
     "qrcode": "^1.5.4",
+    "quill": "^2.0.2",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-syntax-highlighter": "^15.5.0",
