--- a/web/Dockerfile.dev
+++ b/web/Dockerfile.dev
@@ -7,7 +7,7 @@ WORKDIR /app
 COPY package*.json ./
 
 # Install all dependencies (including dev)
-RUN npm install
+RUN npm install && npx playwright install --with-deps
 
 # Copy source
 COPY . .
