--- a/.github/workflows/rfc_autostart_codex.yml
+++ b/.github/workflows/rfc_autostart_codex.yml
@@ -29,12 +29,14 @@ jobs:
             const marker = "<!-- codex-autostart:v1 -->";
             const lines = [
               marker,
-              "@codex",
+              "@codex please start a cloud task.",
               "",
-              "请把这个 PR 视为 RFC：先读完 RFC 内容，再输出执行计划。",
-              "把工作拆成若干可独立合并的小 PR，并给出依赖关系。",
-              "先实现最小可交付切片，补齐测试与文档，跑完整 CI。",
-              "每个 PR 的描述里写清楚：验收标准是否满足、风险点、回滚方案。"
+              "Context: this PR is an RFC.",
+              "Tasks:",
+              "1) Read the RFC in this PR and post an execution plan.",
+              "2) Split the work into small, independently mergeable PRs with dependencies.",
+              "3) Implement the smallest shippable slice first and open a PR.",
+              "4) Add/update tests and docs, run full CI, and summarize risks + rollback."
             ];
             const body = lines.join("\n");
 
