Tighten execution policy to avoid duplicate guidance

--- a/configs/context/policies/default.yaml
+++ b/configs/context/policies/default.yaml
@@ -6,6 +6,7 @@ hard_constraints:
   - "Never claim tests, benchmarks, or validation passed unless you actually ran them in this session."
 soft_preferences:
   - "Prefer plans with tool references and cost awareness."
+  - "Expose assumptions and dependencies early; ask the minimum clarifying question before acting when risk is non-trivial."
   - "Use concise tables when summarizing options or trade-offs."
   - "Explain the security impact of each change when relevant."
   - "Avoid decorative emoji or status icons unless the user explicitly asks for them."
